# linkedin-agent

./: .gitignore  AGENTS.md  db_test.py  design_document.md  docker-compose.yml  execution_plan.md  main.py  pyproject.toml  test.py
Entity/: fetcher.py  manager.py  parser.py
ORM/: models.py  repository.py
Tool/Entity/: filter_enumerator.py  scraper.py
Tool/ORM/: db.py
dev_plan/: db_design.md  dev_plan.md  plan_1.md
infra/postgresql_init/: 01-medallion-schema.sql  01-schema.sql  migration.sql
linkedin_dbt/: dbt_project.yml
linkedin_dbt/models/: sources.yml
linkedin_dbt/models/bronze/: staging_ready_job_postings.sql
linkedin_dbt/models/gold/: company_hiring_demand.sql  job_market_summary.sql  location_demand.sql  skills_by_role.sql  top_skills.sql  top_skills_by_industry.sql
linkedin_dbt/models/silver/: dim_companies.sql  dim_locations.sql  dim_titles.sql  fact_job_postings.sql  stg_job_postings.sql
scripts/: extract_skills.py  get_new_job.py  run_normalization_and_dbt.py  run_test.py  scrape_new_job.py  test.py  test1.py
src/linkedin_tool/: client.py  log.py  manager.py  parser.py  schema.py  service.py  setting.py
src/linkedin_tool/db/: base.py  model.py  repository.py
src/linkedin_tool/normalization/: extract_skill.py  fuzzy.py  keys.py  llm.py  pipeline.py  repository.py
test/fixture/: 429.txt  job_search.html
