[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-tool"
version = "0.1.0"

dependencies = [
    "requests==2.33.0",
    "beautifulsoup4==4.14.3",
    "sqlalchemy",
    "psycopg[binary]",
    "lxml==6.0.2",
    "dbt-core=1.11.8",
    "dbt-postgres=1.10.0",
    "groq=1.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]